[project]
name = "large_language_model_deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flax>=0.12.6",
    "jax[cuda13]>=0.9.2",
    "modal>=1.4.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sentencepiece>=0.2.1",
]
